<resources>
    <string name="app_name">PlaceTag</string>
    <string name="nav_map">Map</string>
    <string name="nav_new_place">New place</string>
    <string name="nav_places">My places</string>
    <string name="nav_sync">Sync</string>
    <string name="current_position">Current position</string>
    <string name="selected_position">Selected position</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="address_label">Address</string>
    <string name="unknown_address">Address not found</string>
    <string name="waiting_location">Waiting for location...</string>
    <string name="save_here">Save this place</string>
    <string name="center_me">Center</string>
    <string name="title_hint">Place title</string>
    <string name="description_hint">Notes</string>
    <string name="take_photo">Take photo</string>
    <string name="save_place">Save place</string>
    <string name="update_place">Update place</string>
    <string name="open_place">Open place</string>
    <string name="view_on_map">View on map</string>
    <string name="delete_place">Delete</string>
    <string name="clear_form">Clear</string>
    <string name="no_photo">No photo yet</string>
    <string name="place_photo">Place photo</string>
    <string name="untitled_place">Untitled place</string>
    <string name="places_empty">No saved places yet.</string>
    <string name="search_hint">Search by title or address</string>
    <string name="filter_all">All</string>
    <string name="filter_pending">Pending</string>
    <string name="filter_synced">Synced</string>
    <string name="sync_pending">Send pending places</string>
    <string name="load_remote">Load remote places</string>
    <string name="sync_status">Sync status</string>
    <string name="local_only">Local only</string>
    <string name="synced">Synced</string>
    <string name="sync_error">Sync error</string>
    <string name="permission_needed">Location and camera permissions are needed for this app.</string>
    <string name="missing_title">Please enter a title.</string>
    <string name="missing_location">No location available yet.</string>
    <string name="place_saved">Place saved.</string>
    <string name="place_deleted">Place deleted.</string>
    <string name="sync_complete">Synchronization finished.</string>
    <string name="sync_failed">Synchronization failed. Data is still stored locally.</string>
    <string name="api_base_url">http://10.0.2.2/placetag/places.php</string>
</resources>
